--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -9,3 +9,5 @@ jobs:
     - uses: actions/checkout@v2 # Adds a step to checkout the repository code
     - name: Build
       run: dotnet build
+    - name: Test
+      run: dotnet test
