--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -15,3 +15,5 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: '14'
+    - name: Install packages
+      run: cd DotnetTemplate.Web && npm install
