Add linter step

--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -19,3 +19,5 @@ jobs:
       run: cd DotnetTemplate.Web && npm install
     - name: Build app
       run: cd DotnetTemplate.Web && npm run build
+    - name: Run linter
+      run: npm run lint
