--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -20,4 +20,4 @@ jobs:
     - name: Build app
       run: cd DotnetTemplate.Web && npm run build
     - name: Run linter
-      run: npm run lint
+      run: cd DotnetTemplate.Web && npm run lint
