--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -9,17 +9,37 @@ jobs:
     - uses: actions/checkout@v2 # Adds a step to checkout the repository code
     - name: Build
       run: dotnet build
+
     - name: Test
       run: dotnet test
+
     - name: Setup Node 
       uses: actions/setup-node@v3
       with:
         node-version: '14'
+
     - name: Install packages
       run: cd DotnetTemplate.Web && npm install
+
     - name: Build app
       run: cd DotnetTemplate.Web && npm run build
+
     - name: Run linter
       run: cd DotnetTemplate.Web && npm run lint
+
     - name: Run typescript tests
       run: cd DotnetTemplate.Web && npm run test-with-coverage
+
+  deploy:
+    name: Deploy
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
