--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -43,3 +43,9 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Docker build
+        run: docker build -t anamic/dotnettemplate .
+
+      - name: Docker push
+        run: docker push anamic/dotnettemplate
