--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -33,7 +33,7 @@ jobs:
   deploy:
     if: github.ref_name == 'module-8'
     name: Deploy
-    needs: build
+    # needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
