--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -32,7 +32,7 @@ jobs:
 
   docker:
     name: Build docker image
-    # needs: build
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
